[gd_scene load_steps=4 format=3 uid="uid://63g2sye57nik"]

[ext_resource type="Texture2D" uid="uid://ntms54u47ns4" path="res://Beams/Beam - Beam1.png" id="1_cvrvh"]
[ext_resource type="Script" path="res://Beams/beam_wave.gd" id="1_q10x2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8ryp"]
size = Vector2(54.5, 8)

[node name="BeamWave" type="Area2D"]
script = ExtResource("1_q10x2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_cvrvh")
region_enabled = true
region_rect = Rect2(128.246, 27.0354, 127.22, 10.4709)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(13.9, 0)
scale = Vector2(0.4, 0.4)
shape = SubResource("RectangleShape2D_i8ryp")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
